# kaggle_llm_prompt_recovery

./: .gitignore  .pre-commit-config.yaml  pylintrc  pyproject.toml
kaggle_llm_prompt_recovery/: config.yaml  entities.py  go_gemma.py  go_gemma_inference.py  go_gemma_sftrainer.py  go_only_inference.py  go_phi_sftrainer.py  test.py  test_from_scratch.py  utilities.py  utils_inference.py  utils_train.py
kaggle_lmsys/: eda_feature_importances.py  eda_token_length.py  go_deberta.py  go_deberta_model_type.py  go_gemma.py  go_lgbm.py  go_lgbm_model_type.py  go_lgbm_v2.py  go_silos.py  inference.py  inference_deberta.py  inference_go_deberta_model_type.py  inference_go_silos.py  inference_lgbm.py  inference_lgbm_v2.py  models.py  playground.py  predictive_ai_models.py  train_utils.py  trian.py  utils.py
kaggle_lmsys/config/: all_in_one.yaml
kaggle_lmsys/models/: classifier_lgbm_pipeline.py  deberta_classifier.py  embedding_flow_common.py  embedding_flow_deterta.py  embedding_flow_length.py  embedding_flow_tfidf.py  embedding_flow_word2vec.py  entities.py  enum.py  lgbm_classifier.py  model_type_classifier.py  model_type_model_flow.py  silos_classifier.py  utils.py  word2vec_embedding_processor.py
kaggle_lmsys/tests/: muck_around.py
tests/: conftest.py  test_kaggle_llm_prompt_recovery.py  test_silos_classifier.py
