[tool.poetry]
name = "kaggle_llm_prompt_recovery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
huggingface = "^0.0.1"
transformers = "^4.38.1"
datasets = "^2.17.1"
scipy = "^1.12.0"
scikit-learn = "^1.4.1"
torch = "^2.2.1"
accelerate = "^0.27.2"
tqdm = "^4.66.2"
peft = "^0.8.2"
bitsandbytes = "^0.42.0"
nltk = "^3.8.1"
sentencepiece = "^0.2.0"
protobuf = "^4.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.2.0"
pre-commit = "^3.6.2"
pylint = "^3.0.4"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
